# selfpypi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  piplist.txt  pyproject.toml
