[tool.poetry]
name = "selfpypi"
version = "0.1.0"
description = ""
authors = ["yuxiaofei <531189371@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip2pi = "^0.8.1"
pypiserver = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true
